[project]
name = "num-guess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Waleed Hassan", email = "vkdeku20@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
num-guess = "num_guess:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
